--- a/package.json
+++ b/package.json
@@ -6,9 +6,7 @@
   "directories": {
     "doc": "docs"
   },
-  "dependencies": {
-    "@sinch/readme-sync": "^1.1.14"
-  },
+  "dependencies": {},
   "devDependencies": {},
   "scripts": {},
   "author": "Sinch",
