--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "directories": {
     "doc": "docs"
   },
-  "dependencies": {},
+  "dependencies": {
+    "@sinch/readme-sync": "^1.1.16"
+  },
   "devDependencies": {},
   "scripts": {},
   "author": "Sinch",
