--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "doc": "docs"
   },
   "dependencies": {
-    "@sinch/readme-sync": "^1.1.17"
+    "@sinch/readme-sync": "latest"
   },
   "devDependencies": {},
   "scripts": {},
